--- a/firebase.json
+++ b/firebase.json
@@ -2,9 +2,14 @@
   "hosting": {
     "public": "dev-build",
     "ignore": [
-      "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
   }
 }
